# team1

./: README.md
lesson1/substrate-node-template/: Makefile
lesson1/substrate-node-template/pallets/poe/: Cargo.toml
lesson1/substrate-node-template/runtime/: Cargo.toml
lesson1/substrate-node-template/runtime/src/: lib.rs
lesson2/substrate-node-template/pallets/kitties/: Cargo.toml
lesson2/substrate-node-template/pallets/kitties/src/: lib.rs  mock.rs  tests.rs
lesson2/substrate-node-template/runtime/: Cargo.toml
lesson2/substrate-node-template/runtime/src/: lib.rs
lesson2/substrate-node-template/scripts/: init.sh
lesson3/frontend-bak/: package.json
lesson3/frontend-bak/src/: Kitties.js
lesson3/frontend-bak/src/config/: types.json
lesson3/frontend/src/: Kitties.js  KittyCards.js
lesson3/frontend/src/config/: types.json
lesson3/substrate-node-template/pallets/kitties/src/: link.rs
lesson3/substrate-node-template/pallets/poe/: Cargo.toml
lesson3/substrate-node-template/pallets/poe/src/: lib.rs
lesson3/substrate-node-template/pallets/template/: Cargo.toml
lesson3/substrate-node-template/runtime/: Cargo.toml
lesson3/substrate-node-template/runtime/src/: lib.rs
lesson4/lecture-demo/pallets/ocw-demo/src/: lib.rs
lesson5/erc20/: lib.rs
lesson5/substrate-node-template/node/: Cargo.toml
lesson5/substrate-node-template/node/src/: chain_spec.rs  rpc.rs
lesson5/substrate-node-template/pallets/kitties/: Cargo.toml
lesson5/substrate-node-template/pallets/kitties/src/: lib.rs
lesson5/substrate-node-template/pallets/poe/src/: tests.rs
lesson5/substrate-node-template/runtime/: Cargo.toml
lesson5/substrate-node-template/runtime/src/: lib.rs
lesson6/: README.md
lesson6/substrate-node-template/: tao-staging-raw.json  tao-staging.json
lesson6/substrate-node-template/node/: Cargo.toml
lesson6/substrate-node-template/node/src/: chain_spec.rs  command.rs  service.rs
lesson6/substrate-node-template/pallets/template/src/: lib.rs
lesson6/substrate-node-template/runtime/: Cargo.toml
lesson6/substrate-node-template/runtime/src/: lib.rs
