[package]
authors = ['anonymous']
edition = '2018'
license = 'Unlicense'
name = 'pallet-kitties'
version = '0.1.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }

frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }

[dev-dependencies]
pallet-randomness-collective-flip = { version = '2.0.0' }
pallet-balances = { package = 'pallet-balances', version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-io/std',
    'sp-std/std',
    'sp-runtime/std',
]
