[package]
authors = ['anonymous']
edition = '2018'
license = 'Unlicense'
name = 'pallet-poe'
version = '0.1.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false }

frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
sp-core = { default-features = false, version = '2.0.1' }
sp-io = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }
sp-std = { default-features = false, version = '2.0.1' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
]
